--- a/src/components/users/users.html
+++ b/src/components/users/users.html
@@ -1,12 +1,12 @@
 <div>
-  <!----------------------- 面包屑组件 -->
+  <!--  面包屑组件---------------- -->
   <el-breadcrumb class="bread" separator-class="el-icon-arrow-right">
     <el-breadcrumb-item :to="{ path: '/' }">首页</el-breadcrumb-item>
     <el-breadcrumb-item>用户管理</el-breadcrumb-item>
     <el-breadcrumb-item>用 户列表</el-breadcrumb-item>
   </el-breadcrumb>
 
-  <!-- -----------------输入框组件 -->
+  <!--输入框组件 -------------------->
   <el-row :gutter="20">
     <el-col :span="8">
       <el-input
@@ -31,14 +31,14 @@
     </el-col>
   </el-row>
 
-  <!-- ----------------表格组件 -->
+  <!--表格组件--------------------- -->
   <el-table :data="usersData" style="width: 100%">
     <el-table-column prop="username" label="姓名" width="180">
     </el-table-column>
     <el-table-column prop="email" label="邮箱" width="180"> </el-table-column>
     <el-table-column prop="mobile" label="电话"> </el-table-column>
     <el-table-column label="状态">
-      <!-- --------自定义列 -->
+      <!--自定义列---------------- -->
       <template slot-scope="scope">
         <el-switch
           @change="stateChange(scope.row)"
@@ -48,7 +48,7 @@
       </template>
     </el-table-column>
     <el-table-column label="操作">
-      <!-- --------自定义列 -->
+      <!--自定义列-- -->
       <template slot-scope="scope">
         <el-button
           type="primary"
@@ -71,7 +71,7 @@
     </el-table-column>
   </el-table>
 
-  <!----------------- 分页组件 -->
+  <!--分页组件 -------------------->
   <el-pagination
     background
     layout="prev, pager, next"
@@ -82,7 +82,7 @@
   >
   </el-pagination>
 
-  <!-- ---------------第一个对话框： 添加用户对话框 -->
+  <!--第一个对话框： 添加用户对话框 -------------------->
   <el-dialog
     @closed="dialogClosed"
     title="添加用户"
